# hive-visual-hive-e2e-proof

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  visual-hive.config.yaml
.github/workflows/: hive-visual-hive.yml  visual-hive-pr.yml
.hive/: integrated.json
docs/: hive-quickstart.md  visual-hive.md
e2e/: playwright.config.ts
service/: __init__.py  metrics.py
src/: metrics.test.ts
tests_py/: test_metrics.py
